// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grammar should parse case-0.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 4,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 1,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 2,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 3,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 5,
  "kind": "program",
}
`;

exports[`grammar should parse case-1.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 15,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20;
},
      "return": {
        "id": 6,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 13,
            "kind": "op_binary",
            "left": {
              "id": 11,
              "kind": "op_binary",
              "left": {
                "id": 9,
                "kind": "op_binary",
                "left": {
                  "id": 7,
                  "kind": "number",
                  "ref": 0,
                  "value": 0n,
                },
                "op": "+",
                "ref": 0 + 1,
                "right": {
                  "id": 8,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "op": "*",
              "ref": (0 + 1) * 10,
              "right": {
                "id": 10,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
            },
            "op": "/",
            "ref": (0 + 1) * 10 / 20,
            "right": {
              "id": 12,
              "kind": "number",
              "ref": 20,
              "value": 20n,
            },
          },
          "id": 14,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20;,
        },
      ],
    },
  ],
  "id": 16,
  "kind": "program",
}
`;

exports[`grammar should parse case-2.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 99,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10;
},
      "return": {
        "id": 88,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 97,
            "kind": "op_binary",
            "left": {
              "id": 95,
              "kind": "op_binary",
              "left": {
                "id": 93,
                "kind": "op_binary",
                "left": {
                  "id": 91,
                  "kind": "op_binary",
                  "left": {
                    "id": 89,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 90,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 92,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 94,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10,
            "right": {
              "id": 96,
              "kind": "number",
              "ref": 10,
              "value": 10n,
            },
          },
          "id": 98,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10;,
        },
      ],
    },
  ],
  "id": 100,
  "kind": "program",
}
`;

exports[`grammar should parse case-3.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 114,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId;
},
      "return": {
        "id": 101,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 112,
            "kind": "op_binary",
            "left": {
              "id": 108,
              "kind": "op_binary",
              "left": {
                "id": 106,
                "kind": "op_binary",
                "left": {
                  "id": 104,
                  "kind": "op_binary",
                  "left": {
                    "id": 102,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 103,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 105,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 107,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10 * someId,
            "right": {
              "id": 111,
              "kind": "op_binary",
              "left": {
                "id": 109,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
              "op": "*",
              "ref": 10 * someId,
              "right": {
                "id": 110,
                "kind": "id",
                "ref": someId,
                "value": "someId",
              },
            },
          },
          "id": 113,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId;,
        },
      ],
    },
  ],
  "id": 115,
  "kind": "program",
}
`;

exports[`grammar should parse case-4.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 137,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;
},
      "return": {
        "id": 116,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 135,
            "kind": "op_binary",
            "left": {
              "id": 127,
              "kind": "op_binary",
              "left": {
                "id": 123,
                "kind": "op_binary",
                "left": {
                  "id": 121,
                  "kind": "op_binary",
                  "left": {
                    "id": 119,
                    "kind": "op_binary",
                    "left": {
                      "id": 117,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 118,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 120,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 122,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 126,
                "kind": "op_binary",
                "left": {
                  "id": 124,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 125,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10,
            "right": {
              "id": 134,
              "kind": "op_binary",
              "left": {
                "id": 130,
                "kind": "op_binary",
                "left": {
                  "id": 128,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 129,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 10,
              "right": {
                "id": 133,
                "kind": "op_binary",
                "left": {
                  "id": 131,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 10,
                "right": {
                  "id": 132,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
            },
          },
          "id": 136,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;,
        },
      ],
    },
  ],
  "id": 138,
  "kind": "program",
}
`;

exports[`grammar should parse case-5.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 162,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);
},
      "return": {
        "id": 139,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 160,
            "kind": "op_binary",
            "left": {
              "id": 150,
              "kind": "op_binary",
              "left": {
                "id": 146,
                "kind": "op_binary",
                "left": {
                  "id": 144,
                  "kind": "op_binary",
                  "left": {
                    "id": 142,
                    "kind": "op_binary",
                    "left": {
                      "id": 140,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 141,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 143,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 145,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 149,
                "kind": "op_binary",
                "left": {
                  "id": 147,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 148,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10),
            "right": {
              "id": 159,
              "kind": "op_binary",
              "left": {
                "id": 153,
                "kind": "op_binary",
                "left": {
                  "id": 151,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 152,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 123.add(10),
              "right": {
                "id": 158,
                "kind": "op_binary",
                "left": {
                  "id": 154,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 123.add(10),
                "right": {
                  "args": [
                    {
                      "id": 156,
                      "kind": "number",
                      "ref": 10,
                      "value": 10n,
                    },
                  ],
                  "id": 157,
                  "kind": "op_call",
                  "name": "add",
                  "ref": 123.add(10),
                  "src": {
                    "id": 155,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                },
              },
            },
          },
          "id": 161,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);,
        },
      ],
    },
  ],
  "id": 163,
  "kind": "program",
}
`;

exports[`grammar should parse case-6.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 188,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));
},
      "return": {
        "id": 164,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 186,
            "kind": "op_binary",
            "left": {
              "id": 175,
              "kind": "op_binary",
              "left": {
                "id": 171,
                "kind": "op_binary",
                "left": {
                  "id": 169,
                  "kind": "op_binary",
                  "left": {
                    "id": 167,
                    "kind": "op_binary",
                    "left": {
                      "id": 165,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 166,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 168,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 170,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 174,
                "kind": "op_binary",
                "left": {
                  "id": 172,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 173,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10)),
            "right": {
              "id": 185,
              "kind": "op_binary",
              "left": {
                "id": 178,
                "kind": "op_binary",
                "left": {
                  "id": 176,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 177,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < abs(123.add(10)),
              "right": {
                "id": 184,
                "kind": "op_binary",
                "left": {
                  "id": 179,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < abs(123.add(10)),
                "right": {
                  "args": [
                    {
                      "args": [
                        {
                          "id": 181,
                          "kind": "number",
                          "ref": 10,
                          "value": 10n,
                        },
                      ],
                      "id": 182,
                      "kind": "op_call",
                      "name": "add",
                      "ref": 123.add(10),
                      "src": {
                        "id": 180,
                        "kind": "number",
                        "ref": 123,
                        "value": 123n,
                      },
                    },
                  ],
                  "id": 183,
                  "kind": "op_static_call",
                  "name": "abs",
                  "ref": abs(123.add(10)),
                },
              },
            },
          },
          "id": 187,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));,
        },
      ],
    },
  ],
  "id": 189,
  "kind": "program",
}
`;

exports[`grammar should parse case-7.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 192,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 190,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 191,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 196,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 193,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 194,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 195,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 200,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Bool {
    return 0;
},
      "return": {
        "id": 197,
        "kind": "type_ref",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
      "statements": [
        {
          "expression": {
            "id": 198,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 199,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 201,
  "kind": "program",
}
`;

exports[`grammar should parse case-8.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "id": 202,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_1",
      "ref": @name(native_name_1)
native testFunc();,
      "return": null,
    },
    {
      "args": [],
      "id": 204,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_2",
      "ref": @name(native_name_2)
native testFunc(): Int;,
      "return": {
        "id": 203,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
    },
    {
      "args": [],
      "id": 206,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_3",
      "ref": @name(native_name_3)
native testFunc(): Bool;,
      "return": {
        "id": 205,
        "kind": "type_ref",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
    },
  ],
  "id": 207,
  "kind": "program",
}
`;

exports[`grammar should parse case-9.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 218,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + 3!! > 123;
},
      "return": {
        "id": 208,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 216,
            "kind": "op_binary",
            "left": {
              "id": 214,
              "kind": "op_binary",
              "left": {
                "id": 211,
                "kind": "op_binary",
                "left": {
                  "id": 209,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 210,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + 3!!,
              "right": {
                "id": 213,
                "kind": "op_unary",
                "op": "!!",
                "ref": 3!!,
                "right": {
                  "id": 212,
                  "kind": "number",
                  "ref": 3,
                  "value": 3n,
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + 3!! > 123,
            "right": {
              "id": 215,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 217,
          "kind": "statement_return",
          "ref": return 1 + 2 + 3!! > 123;,
        },
      ],
    },
  ],
  "id": 219,
  "kind": "program",
}
`;

exports[`grammar should parse case-10.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 29,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 17,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 27,
            "kind": "op_binary",
            "left": {
              "id": 25,
              "kind": "op_binary",
              "left": {
                "id": 20,
                "kind": "op_binary",
                "left": {
                  "id": 18,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 19,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 24,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 23,
                  "kind": "op_binary",
                  "left": {
                    "id": 21,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 22,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 26,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 28,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 30,
  "kind": "program",
}
`;

exports[`grammar should parse case-11.tact 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 33,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 32,
            "kind": "type_ref",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 45,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 31,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 43,
            "kind": "op_binary",
            "left": {
              "id": 41,
              "kind": "op_binary",
              "left": {
                "id": 36,
                "kind": "op_binary",
                "left": {
                  "id": 34,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 35,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 40,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 39,
                  "kind": "op_binary",
                  "left": {
                    "id": 37,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 38,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 42,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 44,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 46,
  "kind": "program",
}
`;

exports[`grammar should parse case-12.tact 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 49,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 48,
            "kind": "type_ref",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 58,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    if (src != null) {
        return src;
    }
    return 0;
},
      "return": {
        "id": 47,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "elseif": null,
          "expression": {
            "id": 52,
            "kind": "op_binary",
            "left": {
              "id": 50,
              "kind": "id",
              "ref": src,
              "value": "src",
            },
            "op": "!=",
            "ref": src != null,
            "right": {
              "id": 51,
              "kind": "null",
              "ref": null,
            },
          },
          "falseStatements": [],
          "id": 55,
          "kind": "statement_condition",
          "ref": if (src != null) {
        return src;
    },
          "trueStatements": [
            {
              "expression": {
                "id": 53,
                "kind": "id",
                "ref": src,
                "value": "src",
              },
              "id": 54,
              "kind": "statement_return",
              "ref": return src;,
            },
          ],
        },
        {
          "expression": {
            "id": 56,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 57,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 59,
  "kind": "program",
}
`;

exports[`grammar should parse case-13.tact 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 62,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 61,
            "kind": "type_ref",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 71,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    if (src != null) {
        return src;
    } else {
        return 10;
    }
},
      "return": {
        "id": 60,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "elseif": null,
          "expression": {
            "id": 65,
            "kind": "op_binary",
            "left": {
              "id": 63,
              "kind": "id",
              "ref": src,
              "value": "src",
            },
            "op": "!=",
            "ref": src != null,
            "right": {
              "id": 64,
              "kind": "null",
              "ref": null,
            },
          },
          "falseStatements": [
            {
              "expression": {
                "id": 68,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
              "id": 69,
              "kind": "statement_return",
              "ref": return 10;,
            },
          ],
          "id": 70,
          "kind": "statement_condition",
          "ref": if (src != null) {
        return src;
    } else {
        return 10;
    },
          "trueStatements": [
            {
              "expression": {
                "id": 66,
                "kind": "id",
                "ref": src,
                "value": "src",
              },
              "id": 67,
              "kind": "statement_return",
              "ref": return src;,
            },
          ],
        },
      ],
    },
  ],
  "id": 72,
  "kind": "program",
}
`;

exports[`grammar should parse case-14.tact 1`] = `
{
  "entries": [
    {
      "declarations": [
        {
          "id": 74,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 73,
            "kind": "type_ref",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "id": 76,
          "kind": "def_field",
          "name": "b",
          "ref": b: Int;,
          "type": {
            "id": 75,
            "kind": "type_ref",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "args": [
            {
              "id": 78,
              "kind": "def_argument",
              "name": "a",
              "ref": a: Int,
              "type": {
                "id": 77,
                "kind": "type_ref",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
            {
              "id": 80,
              "kind": "def_argument",
              "name": "b",
              "ref": b: Int,
              "type": {
                "id": 79,
                "kind": "type_ref",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "id": 85,
          "kind": "def_init_function",
          "ref": init(a: Int, b: Int) {
        self.a = a;
        self.b = b;
    },
          "statements": [
            {
              "expression": {
                "id": 81,
                "kind": "id",
                "ref": a,
                "value": "a",
              },
              "id": 82,
              "kind": "statement_assign",
              "path": [
                "self",
                "a",
              ],
              "ref": self.a = a;,
            },
            {
              "expression": {
                "id": 83,
                "kind": "id",
                "ref": b,
                "value": "b",
              },
              "id": 84,
              "kind": "statement_assign",
              "path": [
                "self",
                "b",
              ],
              "ref": self.b = b;,
            },
          ],
        },
      ],
      "id": 86,
      "kind": "def_contract",
      "name": "Sample",
      "ref": contract Sample {
    a: Int;
    b: Int;
    
    init(a: Int, b: Int) {
        self.a = a;
        self.b = b;
    }
},
    },
  ],
  "id": 87,
  "kind": "program",
}
`;
